package strategy.improve;

/**
 * @author liangyehao
 * @version 1.0
 * @date 2020/6/27 18:59
 * @content
 */
interface FlyBehavior{
    /**
     * 由子类具体实现
     */
    void fly();
}
