package strategy.improve;

/**
 * @author liangyehao
 * @version 1.0
 * @date 2020/6/27 19:00
 * @content
 */
public class GoodFlyBehavior implements FlyBehavior {
    /**
     * 由子类具体实现
     */
    public void fly() {
        System.out.println("飞翔技术高超···");
    }
}
